--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,16 +1,16 @@
-name: reviewdog
+name: Lint
 on: push
 jobs:
-  eslint:
-    name: eslint
+  lint:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Set Node.js 12.x
+        uses: actions/setup-node@v1
         with:
-          node-version: '14'
-      - run: yarn install
-      - uses: reviewdog/action-eslint@v1
-        with:
-          reporter: github-check
-          eslint_flags: 'src/js/'
+          node-version: 12.x
+      - name: ci
+        run: npm ci
+      - name: ESLint
+        run: npm run lint
